2008-05-23  Tomas Frydrych  <tf@o-hand.com>

	* src/hd-comp-mgr.c:
	* src/hd-comp-mgr.h:
	* src/hd-switcher.c:
	Moved HdHome object from HdSwitcher into the CM; handle events on
	the Home actor.

2008-05-23  Tomas Frydrych  <tf@o-hand.com>

	* src/hd-switcher-group.c:
	(hd_switcher_group_show_all):
	(hd_switcher_group_hide_all):
	Removed temporary workaround not necessary now that HdHome is
	present.

2008-05-23  Tomas Frydrych  <tf@o-hand.com>

	* src/Makefile.am:
	* src/hd-home.h:
	* src/hd-home.c:
	Initial stubs for the Home object.

	* src/hd-switcher.c:
	(hd_switcher_constructed):
	(hd_switcher_clicked):
	(hd_switcher_hide_switcher):
	Integrated HdHome object into the WM.

2008-05-22  Tomas Frydrych  <tf@o-hand.com>

	* src/hd-comp-mgr.c:
	(hd_comp_mgr_effect):
	Implemented TV-out style effect for application windows.

2008-05-22  Tomas Frydrych  <tf@o-hand.com>

	Cleaned up comments and code.

2008-05-22  Tomas Frydrych  <tf@o-hand.com>

	Removed stale files.

2008-05-22  Tomas Frydrych  <tf@o-hand.com>

	Simplified compositor by subclassing MBWM2's Clutter compositor.

2008-05-14  Tomas Frydrych  <tf@o-hand.com>

	* src/hd-comp-window.c:
	* src/hd-switcher.c:
	Sync up with upstream changes in clutter API.
